[package]
name = "profugo"
version = "0.1.0"
edition = "2021"
authors = ["Joel García <garciajunior796@gmail.com>"]

exclude = ["config.json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
serde = {version="1.0.204", features = ["derive"]}
serde_json = {version = "1.0.120"}
